feat: add amqp rpc example